test/Fail/BothWithAndRHS.err
BothWithAndRHS.agda:6.1-11: error: [Syntax.MissingWithClauses]
Missing with-clauses for function f
